# local-agent-pipeline

./: .env.example  .gitignore  BIBLE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF.md  README.md  ROADMAP.md  SECURITY.md  pyproject.toml  setup.sh  start.sh
.claude/skills/project-state/: SKILL.md
.claude/skills/session-start/: SKILL.md
.claude/skills/session-stop/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
config/: pipeline.yaml  policy.yaml
docs/: SOP.md
examples/: sample-contract.txt  sample-report.txt
examples/expected-outputs/: README.md  sample-contract.json  sample-contract.jsonl  sample-report.json  sample-report.jsonl
scripts/: export_runs.py  gate.sh  render_examples.py  secure.sh  session-snapshot.sh  state.sh
src/agent_pipeline/: __init__.py  audit.py  cli.py  config.py  contracts.py  export.py  gate.py  llm.py  planner.py  reviewer.py  worker.py
tests/: conftest.py  test_audit_chain.py  test_audit_completeness.py  test_audit_hardening.py  test_config_validation.py  test_contracts.py  test_export.py  test_non_interactive.py  test_pipeline_flow.py  test_policy_gate.py  test_providers.py  test_web_api.py
web/: .gitignore  api_server.py  index.html  package-lock.json  package.json  postcss.config.cjs  start.sh  tailwind.config.cjs  vite.config.ts
web/src/: App.tsx  styles.css
