[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-pipeline"
version = "0.1.0"
description = "A minimal, fully local multi-agent pipeline with auditability and human oversight as first-class features."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Leon Köllerwirth Hlihel" }]
keywords = ["agents", "llm", "ollama", "governance", "audit", "human-in-the-loop"]
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "click>=8.4.2",
    "rich>=13.7",
]
# No provider SDKs: Ollama and the cloud providers (OpenAI, Gemini, Claude) are
# all called over plain HTTP via the standard library. See src/agent_pipeline/llm.py.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://leonkoellerwirth.de"
Repository = "https://github.com/leonkoellerwirth-arch/local-agent-pipeline"

[project.scripts]
agent-pipeline = "agent_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_pipeline = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
